--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TripRec</string>
     <string name="picture">Picture</string>
+    <string name="video">Video</string>
     <string name="description_info">Info</string>
     <string name="request_permission">This app needs camera permission.</string>
     <string name="permission_request">This sample needs permission for camera and audio recording.</string>
