--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="key_recorden"> recorden </string>
     <string name="def_recordtime"> 15s </string>
     <string name="key_recordtime"> recordtime </string>
+    <string name="key_max_videofiles"> max_videofiles </string>
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
